Switch uses of URL in @CreoleParameters to ResourceReference